2011-04-21  Tony Gentilcore  <tonyg@chromium.org>

        [chromium] Temporarily skip new contentSecurityPolicy tests
        https://bugs.webkit.org/show_bug.cgi?id=59103

        Tests introduced by http://trac.webkit.org/changeset/84478

        * platform/chromium/test_expectations.txt:

2011-04-20  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Expose console API to the code evaluated by sidebar.setExpression()

        Web Inspector: [Extensions API] console API is not exposed to code evaluated by sidebar.setExpression()
        https://bugs.webkit.org/show_bug.cgi?id=59006

        * inspector/extensions/extensions-expected.txt:
        * inspector/extensions/extensions.html:

2011-04-21  Tony Gentilcore  <tonyg@chromium.org>

        [chromium] Correct expecations for editing/selection/designmode-no-caret.html
        https://bugs.webkit.org/show_bug.cgi?id=59088

        Straighten out bad override in designmode-no-caret.html

        * platform/chromium/test_expectations.txt:

2011-04-21  Adam Roben  <aroben@apple.com>

        Skip some newly-failing tests on Windows

        <http://webkit.org/b/59098> and <http://webkit.org/b/59099> track the failures.

        * platform/win/Skipped: Added fast/transforms/selection-bounds-in-transformed-view.html and
        http/tests/security/contentSecurityPolicy/frame-src-blocked.html.

2011-04-21  Tony Gentilcore  <tonyg@chromium.org>

        BitmapImage::destroyMetadataAndNotify should clear m_checkedForSolidColor
        https://bugs.webkit.org/show_bug.cgi?id=58926

        Remove chromium's crashing expectations.

        * platform/chromium/test_expectations.txt:

2011-04-21  Tony Gentilcore  <tonyg@chromium.org>

        [chromium] Correct expecations for editing/selection/designmode-no-caret.html
        https://bugs.webkit.org/show_bug.cgi?id=59088

        http://trac.webkit.org/changeset/84470 seemed to have caused a conflict. This