@@ -11,4 +11,4 @@ HTTP_REFERER: http://127.0.0.1:8000/security/contentSecurityPolicy/resources/gen
 REQUEST_METHOD: POST
 === POST DATA ===
 document-url: http://127.0.0.1:8000/security/contentSecurityPolicy/resources/generate-csp-report.html
-violated-directive: script-src \'self\'
+violated-directive: script-src 'self'
