@@ -1,3 +1,14 @@
+2011-04-21  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Tony Gentilcore.
+
+        Make test robust to PHP magic quotes
+        https://bugs.webkit.org/show_bug.cgi?id=59104
+
+        * http/tests/security/contentSecurityPolicy/report-uri-expected.txt:
+        * http/tests/security/contentSecurityPolicy/report-uri-from-child-frame-expected.txt:
+        * http/tests/security/contentSecurityPolicy/resources/save-report.php:
+
 2011-04-21  Tony Gentilcore  <tonyg@chromium.org>
 
         [chromium] Temporarily skip new contentSecurityPolicy tests
